--- a/delivr-aide-react-website-1.0/src/styles/_contact.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_contact.scss
@@ -18,7 +18,44 @@
 
 .contact-page-contact {
     font-family: $mainFont;
-    font-size: 2em;
+    font-size: 2.5em;
     color: white;
     text-align: center;
+    span {
+        font-size: 1em;
+    }
+}
+
+.contact-logo {
+    transition: all 0.25s ease-in-out;
+    width: 75px;
+}
+
+.insta:hover {
+    opacity: 0.8;
+}
+
+.linkedin:hover {
+    opacity: 0.8;
+}
+
+.contact-link-wrapper {
+    margin-top: 45px;
+    display: flex;
+    align-items: center;
+    gap: 45px;
+    flex-direction: column;
+}
+
+.contact-page-title {
+    font-family: $mainFont;
+    font-size: 4em;
+    color: white;
+    text-align: center;
+}
+
+@media only screen and (max-device-width: 700px) {
+    .contact-page-contact span {
+        font-size: 0.55em;
+    }
 }
