--- a/delivr-aide-react-website-1.0/src/styles/_addKit.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_addKit.scss
@@ -106,7 +106,6 @@
                     font-size: 2vw;
                     padding: 15px;
                     background: transparent;
-                    border: 4px solid transparent;
                     align-self: center;
                     box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
                     border: 4px solid var(--main-font-color);
@@ -160,7 +159,7 @@
     font-size: 2vw;
 }
 
-.form-wrapper input:not(.form-submit) {
+.addKitInputForm {
     all: unset;
     border: 4px solid var(--main-font-color);
     border-radius: 25px;
@@ -170,7 +169,6 @@
     padding: 15px;
     background: var(--main-font-color);
     transition: all 0.25s ease-in-out;
-    color: black;
     box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
 }
 
@@ -197,8 +195,9 @@
     .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-account-connexion {
         flex-direction: column;
     }
-    .form-wrapper input:not(.form-submit) {
+    .addKitInputForm {
         font-size: 6vw;
+        font-family: var(--main-font);
     }
     .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
         font-size: 8vw;
