--- a/delivr-aide-react-website-1.0/src/styles/style.css
+++ b/delivr-aide-react-website-1.0/src/styles/style.css
@@ -1540,7 +1540,6 @@ body {
   font-size: 2vw;
   padding: 15px;
   background: transparent;
-  border: 4px solid transparent;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -1614,7 +1613,7 @@ body {
   font-size: 2vw;
 }
 
-.form-wrapper input:not(.form-submit) {
+.addKitInputForm {
   all: unset;
   border: 4px solid var(--main-font-color);
   border-radius: 25px;
@@ -1625,7 +1624,6 @@ body {
   background: var(--main-font-color);
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
-  color: black;
   -webkit-box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
           box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
 }
@@ -1662,8 +1660,9 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .form-wrapper input:not(.form-submit) {
+  .addKitInputForm {
     font-size: 6vw;
+    font-family: var(--main-font);
   }
   .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
     font-size: 8vw;
