--- a/delivr-aide-react-website-1.0/src/styles/_addKit.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_addKit.scss
@@ -163,13 +163,18 @@
     all: unset;
     border: 4px solid var(--main-font-color);
     border-radius: 25px;
-    font-family: var(--main-font);
     color: var(--main-font-color);
-    font-size: 2vw;
     padding: 15px;
     background: var(--main-font-color);
     transition: all 0.25s ease-in-out;
     box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+    font-family: var(--main-font);
+    font-size: 2vw;
+}
+
+#phoneNumber,#firstName,#lastName,#city,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
+    font-family: var(--main-font);
+    font-size: 2vw;
 }
 
 .form-wrapper input:focus {
@@ -195,9 +200,8 @@
     .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-account-connexion {
         flex-direction: column;
     }
-    .addKitInputForm {
+    #phoneNumber,#firstName,#lastName,#city,#zipCode,#adress,#phoneNumber,#mail,#confidentialité {
         font-size: 6vw;
-        font-family: var(--main-font);
     }
     .main-wrapper-flex .main-wrapper-add-kit .form-main-wrapper .form-wrapper .form-submit {
         font-size: 8vw;
