--- a/delivr-aide-react-website-1.0/src/styles/style.scss
+++ b/delivr-aide-react-website-1.0/src/styles/style.scss
@@ -9,6 +9,19 @@ body {
     overflow-x: hidden
 }
 
+.addKitInputForm {
+    all: unset;
+    border: 4px solid var(--main-font-color);
+    border-radius: 25px;
+    font-family: var(--main-font);
+    color: var(--main-font-color);
+    font-size: 2vw;
+    padding: 15px;
+    background: var(--main-font-color);
+    transition: all 0.25s ease-in-out;
+    box-shadow: 4px 7px 18px 6px rgba(0, 0, 0, 0.25);
+}
+
 @import 'variables';
 @import 'app';
 @import 'slick';
