--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -696,6 +696,9 @@
     .conclusion footer .footer-column-wrapper .footer-contact-title {
         font-size: 8vw;
     }
+    .conclusion footer .footer-column-wrapper .footer-left-column .footer-contact-section .instagram-logo {
+        width : 50px;
+    }
     .conclusion footer .footer-copyright {
         font-size: 3vw;
     }
