--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -36,12 +36,9 @@
         justify-content: center;
         width: 80vw;
         gap: 40px;
-        @supports not (gap: 40px) {
-            .introduction-column-wrapper {
-            margin: -0.5em;
-            }
-            .introduction-column-wrapper > * {
-            margin: 0.5em;
+        @supports not (-webkit-gap: 40px) {
+            .left-column{
+                padding-right: 40px;
             }
         }
         margin-bottom: 50px;
@@ -52,13 +49,10 @@
             flex-direction: column;
             font-family: $mainFont;
             gap: 50px;
-            @supports not (gap: 50px) {
-            .left-column {
-            margin: 50px;
-            }
-            .left-column > * {
-            margin: 50px;
-            }
+            @supports not (-webkit-gap: 50px) {
+                .hero-title {
+                    padding-bottom: 50px;
+                }
             }
             width: 50vw;
             .hero-title {
@@ -141,12 +135,9 @@
     justify-content: space-around;
     flex-direction: row;
     gap: 20%;
-    @supports not (gap: 20%) {
-        .available-city {
-            margin: 20%;
-        }
-        .available-city > * {
-            margin: 20%;
+    @supports not (-webkit-gap: 20%) {
+        .france-map-text {
+            padding-left: 20%;
         }
     }
     margin-bottom: 40px;
@@ -165,7 +156,7 @@
     margin-bottom: 40px;
     overflow: hidden;
     gap: 10px;
-    @supports not (gap: 10px) {
+    @supports not (-webkit-gap: 10px) {
         .delivraide-info{
             margin: 10px;
         }
@@ -328,13 +319,10 @@
         justify-content: flex-start;
         flex-direction: row;
         gap: 40px;
-        @supports not (gap: 40px) {
-        .donation-column-wrapper {
-            margin: 40px;
-        }
-        .donation-column-wrapper > * {
-            margin: 40px;
-        }
+        @supports not (-webkit-gap: 40px) {
+            .donation-title {
+                padding-bottom: 40px;
+            }
         }
     }
     .donation-title {
@@ -353,7 +341,7 @@
         align-items: flex-start;
         flex-direction: column;
         gap: 40px;
-        @supports not (gap: 40px) {
+        @supports not (-webkit-gap: 40px) {
             .donation-parapgraph {
                 margin: 40px;
             }
@@ -381,12 +369,9 @@
         justify-content: center;
         flex-direction: column;
         gap: 40px;
-        @supports not (gap: 40px) {
-            .recap {
-                margin: 40px;
-            }
-            .recap > * {
-                margin: 40px;
+        @supports not (-webkit-gap: 40px) {
+            * {
+                margin-bottom: 40px;
             }
         }
         margin-top: 40px;
@@ -416,12 +401,12 @@
                     align-items: flex-start;
                     justify-content: center;
                     gap: 20px;
-                    @supports not (gap: 20px) {
-                        .footer-contact-section {
-                            margin: 20px;
+                    @supports not (-webkit-gap: 20px) {
+                        * {
+                            margin-bottom: 10px;
                         }
-                        .footer-contact-section > * {
-                            margin: 20px;
+                        .instagram-logo {
+                            margin-left:15px ;
                         }
                     }
                     .contact-logo {
@@ -429,7 +414,7 @@
                         align-items: center;
                         justify-content: flex-start;
                         gap:50px;
-                        @supports not (gap: 50px) {
+                        @supports not (-webkit-gap: 50px) {
                             .contact-logo {
                                 margin: 50px;
                             }
@@ -517,7 +502,7 @@
         padding-top: 20px;
         flex-direction: column;
         gap: 50px;
-        @supports not (gap: 50px) {
+        @supports not (-webkit-gap: 50px) {
             .info-banner-column-wrapper {
                 margin: 50px;
             }
@@ -545,7 +530,7 @@
     .info-banner-reverse .info-banner-column-wrapper .banner-text {
         padding-top: 20px;
         gap: 50px;
-        @supports not (gap: 50px) {
+        @supports not (-webkit-gap: 50px) {
             .info-banner-reverse .info-banner-column-wrapper .banner-text {
                 margin: 50px;
             }
@@ -602,7 +587,7 @@
         .media-logo-container {
             flex-direction: column;
             gap: 45px;
-            @supports not (gap: 45px) {
+            @supports not (-webkit-gap: 45px) {
                 .media-logo-container {
                     margin: 45px;
                 }
@@ -637,14 +622,11 @@
 @media only screen and (max-device-width: 500px)  {
     .introduction-wrapper .introduction-column-wrapper .left-column {
         gap: 20px;
-        @supports not (gap: 20px) {
-                .media-logo-container {
-                    margin: 45px;
-                }
-                .media-logo-container > * {
-                    margin: 45px;
-                }
+        @supports not (-webkit-gap: 20px) {
+            .hero-title {
+                padding-bottom: 20px;
             }
+        }
         width: 80vw;
     }
     .introduction-wrapper .introduction-column-wrapper .left-column .hero-title {
